fix(command-palette): fix horizontal scrolling issue

--- a/src/components/global/gux-command-palette/gux-command-palette.less
+++ b/src/components/global/gux-command-palette/gux-command-palette.less
@@ -13,7 +13,7 @@ gux-command-palette .gux-command-palette {
     left: 0;
     right: 0;
     margin: 0 auto;
-    width: 750px;
+    max-width: 750px;
     
     padding: 12px;
 
